--- a/Pagina jornalistica/css/style.css
+++ b/Pagina jornalistica/css/style.css
@@ -5,7 +5,7 @@
 
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background: #000000 url(../imagens/fundo.png) repeat-x ;
+    background: #000000 url(../imagens/fundo.gif) repeat-x ;
 }
 
 #container{
@@ -87,21 +87,24 @@ body.foto #navegacao a#foto{
 
 /* Configurar Layout de 3 colunas*/
 
-#conteudo{
-    margin-top: 70px;
-    background: #f5f5f5;
-
-}
-
 #primario{
     width: 270px;
     float: left;
-    margin: 0 10px 20px 195px;
+    margin: 0 0 20px 195px;
+}
+
+#uma-coluna #primario{
+    width: 750px;
+    margin: 0 0 20px 0;
+}  
+
+#duas-colunas #primario{
+    width: 555px;
 }
 
 #secundario{
     width: 270px;
-    float: left;
+    float:left;
 }
 
 #lateral{
@@ -109,7 +112,6 @@ body.foto #navegacao a#foto{
     float: left;
     margin: 0 0 20px -750px;
 }
-
 /*Caixa*/
 
 .caixa{
@@ -127,10 +129,9 @@ h2{
 }
 
 .caixa-conteudo{
-    background: #ffffff;
+    background: #fff;
     padding: 5px;
     margin-top: 5px;
-
 }
 
 /*Formularios*/
